fix: stuck footer card on the bottom

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 0.75rem;
     background-color: #fff;
     width: auto;
@@ -23,6 +24,8 @@
         justify-content: space-between; 
         align-items: center;
         width: 100%;
+        height:2.5rem;
+
 
         .product-card__price{
             margin-left: 1rem;
