--- a/src/components/ProductsList/ProductsList.css
+++ b/src/components/ProductsList/ProductsList.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 1rem;
     justify-self: center;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem 2.5rem;
 
 }
 
